--- a/public/themes/simpleboot3/portal/app.html
+++ b/public/themes/simpleboot3/portal/app.html
@@ -247,7 +247,7 @@
         <div class="peoples text-center wow bounce">
             <img src="__TMPL__/public/assets/static/picture/peoples.png">
         </div>
-        <div class="text-center yl-FwConZx"><a class="zxzx yl-zx h40 wow rubberBand" href="javascript:;" target="_blank"
+        <div class="text-center yl-FwConZx"><a class="zxzx yl-zx h40 wow rubberBand" href="tel:13792208163" target="_blank"
                 rel="nofollow">立刻咨询</a></div>
     </div>
     <div class="container">
