--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -112,7 +112,7 @@
 
         </ul>
         <div class="text-center">
-            <a href="{:cmf_url('portal/apps/suc')}" class="btns btn_more wow rubberBand">+ 更多案例</a>
+            <a href="{:cmf_url('portal/List/index',array('id'=>24))}" class="btns btn_more wow rubberBand">+ 更多案例</a>
         </div>
     </div>
     <div class="container">
@@ -130,35 +130,35 @@
                     <div class="title">APP开发</div>
                     <div class="line"></div>
                     <div class="cons">APP全案策划、app定制开发、app转型升级</div>
-                    <div class="more"><a href="app.html" target="_blank" rel="nofollow">详细了解</a></div>
+                    <div class="more"><a href="{:cmf_url('portal/apps/index')}" target="_blank" rel="nofollow">详细了解</a></div>
                 </li>
                 <li class="col-md-4">
                     <i class="icon2"></i>
-                    <div class="title">物联网与大数据开发</div>
+                    <div class="title">精品软件</div>
                     <div class="line"></div>
-                    <div class="cons">车联网解决方案、工业物联网解决方案、物联网云平台解决方案、支持多用户、跨行业、跨平台、跨设备、无缝接入物联网平台</div>
-                    <div class="more"><a href="wlw.html" target="_blank" rel="nofollow">详细了解</a></div>
+                    <div class="cons">仿鱼泡网、仿boss直聘、云遗嘱、教育软件、实时通讯系统</div>
+                    <div class="more"><a href="{:cmf_url('portal/List/index',array('id'=>25))}" target="_blank" rel="nofollow">详细了解</a></div>
                 </li>
                 <li class="col-md-4">
                     <i class="icon3"></i>
-                    <div class="title">H5混合开发</div>
+                    <div class="title">H5开发</div>
                     <div class="line"></div>
                     <div class="cons">H5定制开发、H5场景制作、H5互动游戏开发、H5视频动画、H5品牌推广</div>
-                    <div class="more"><a href="app.html" target="_blank" rel="nofollow">详细了解</a></div>
+                    <div class="more"><a href="{:cmf_url('portal/apps/index')}" target="_blank" rel="nofollow">详细了解</a></div>
                 </li>
                 <li class="col-md-4">
                     <i class="icon4"></i>
                     <div class="title">微信小程序开发</div>
                     <div class="line"></div>
                     <div class="cons">微信小程序开发、微信公众平台开发、微信支付、服务号、订阅号、微分销、微商城、微信接口等开发定制。</div>
-                    <div class="more"><a href="xcx.html" target="_blank" rel="nofollow">详细了解</a></div>
+                    <div class="more"><a href="{:cmf_url('portal/apps/xcx')}" target="_blank" rel="nofollow">详细了解</a></div>
                 </li>
                 <li class="col-md-4">
                     <i class="icon5"></i>
-                    <div class="title">AR/VR</div>
+                    <div class="title">游戏开发</div>
                     <div class="line"></div>
-                    <div class="cons">AR工业解决方案、AR教育解决方案、AR巡检/远程指导解决方案、AR营销解决方案</div>
-                    <div class="more"><a href="arvr.html" target="_blank" rel="nofollow">详细了解</a></div>
+                    <div class="cons">2d游戏解决方案、3d游戏解决方案</div>
+                    <div class="more"><a href="{:cmf_url('portal/apps/index')}" target="_blank" rel="nofollow">详细了解</a></div>
                 </li>
                 <li class="col-md-4">
                     <i class="icon6"></i>
@@ -354,7 +354,7 @@
 
         </ul>
         <div class="text-center">
-            <a href="javascript:;" target="_blank" rel="nofollow" class="btns btn_more wow rubberBand">立即咨询</a>
+            <a href="tel:13792208163" target="_blank" rel="nofollow" class="btns btn_more wow rubberBand">立即咨询</a>
         </div>
     </div>
     <div class="slider_nav">
