--- a/public/themes/simpleboot3/portal/xcx.html
+++ b/public/themes/simpleboot3/portal/xcx.html
@@ -50,7 +50,7 @@
             <div class="xcx_text col-md-6">
                 <img src="__TMPL__/public/assets/static/picture/xcx_tit.png">
                 <p>个性化定制，打造您的专属小程序；行业全覆盖，一体化微信小程序解决方案，助力企业抢占微信红利 </p>
-                <a href="javascript:;" rel="nofollow" target="_blank" class="made">立即定制</a>
+                <a href="tel:13792208163" rel="nofollow" target="_blank" class="made">立即定制</a>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>微商城类似于手机淘宝，可实现商品展示、搜索、下单、支付等，功能齐全</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -128,7 +128,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>线上线下课程购买、课程预约、在线学习、线下培训、编制课程表、上课签到等功能。</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -144,7 +144,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>为商家提供菜品上传，外卖、堂食点单，支付等服务，适用于餐饮、生鲜水果、蛋糕店等。</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -160,7 +160,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>信贷政策、预约办卡、积分兑换、本地优惠等功能。适用于银行，金融行业类。</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -176,7 +176,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>线上下单、线下消费、会员管理提供详细数据捕捉。适用于各种服务行业。</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -192,7 +192,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>微商城类似于手机淘宝，可实现商品展示、搜索、下单、支付等，功能齐全</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -208,7 +208,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>支持所有IM场景，沟通联系无所顾忌，即时通讯、群组活动、朋友圈、活动关注评论等，</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -224,7 +224,7 @@
                     <div class="txt">
                         <em class="line"></em>
                         <p>提供会前、会中、会后一体化的会议服务，实现会议流程线上化。</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">我要定制</a>
                     </div>
                 </div>
             </li>
@@ -256,7 +256,7 @@
                         <h3>开发实力强</h3>
                         <p>50+精英技术团队<br>
                             精心打造</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
                     </div>
                 </li>
                 <li class="col-md-3">
@@ -265,7 +265,7 @@
                         <h3>经验丰富</h3>
                         <p>20+行业应用解决方案<br>
                             供您选择</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
                     </div>
                 </li>
                 <li class="col-md-3">
@@ -274,7 +274,7 @@
                         <h3>贴心服务</h3>
                         <p>客户为中心，<br>
                             1对1 专人对接</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
                     </div>
                 </li>
                 <li class="col-md-3">
@@ -283,7 +283,7 @@
                         <h3>运营保障</h3>
                         <p>领先的云计算平台<br>
                             为您护航</p>
-                        <a href="javascript:;" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
+                        <a href="tel:13792208163" rel="nofollow" target="_blank" class="btns btn_ask">立即咨询</a>
                     </div>
                 </li>
             </ul>
