--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -390,7 +390,7 @@
         });
     </script>
     <div class="demand_contair">
-        <div class="container">
+        <div class="container" id="xuqiu">
             <form id="feedback_form" name="feedback_form" url="{:url('Form/addPost')}">
                 <h3>请填写您的项目需求给我们：</h3>
                 <ul class="demand_list">
