--- a/public/themes/simpleboot3/portal/list.html
+++ b/public/themes/simpleboot3/portal/list.html
@@ -162,7 +162,7 @@
                 </div>
             </li>
             <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
-            <li><a href="index.html#xuqiu" rel="nofollow"><img src="__TMPL__/public/assets/static/picture/silder3.png"
+            <li><a href="#xuqiu" rel="nofollow"><img src="__TMPL__/public/assets/static/picture/silder3.png"
                         alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
@@ -187,7 +187,7 @@
         });
     </script>
     <div class="demand_contair">
-        <a name="xuqiu"></a>
+        <a id="xuqiu"></a>
         <div class="container">
             <form id="feedback_form" name="feedback_form" url="{:url('Form/addPost')}">
                 <h3>请填写您的项目需求给我们：</h3>
