--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -20,13 +20,13 @@
                     <p>客服电话</p>
                     <h3>13792208163</h3>
 
-                    <ul>
+                    <!-- <ul>
                         <li>
                             <img src="__TMPL__/public/assets/static/picture/foot_ico1.png" class="t1"><img
                                 src="__TMPL__/public/assets/static/picture/code1.png" class="t2" alt="德州一帆微信公众号二维码">
                         </li>
 
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
     <a target="_blank" href="javascript:;"
         style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img
             src="__TMPL__/public/assets/static/picture/batubiao.png" style="float:left;">
-        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">沪公网安备 31010602004925号
+        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">鲁公网安备 31010602004925号
         </p>
     </a>
 </div>
